Use virtual threads for ServiceMemoryUpdateTask